--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "budo app.js:app.js"
+		"start": "budo app.js"
 	},
 	"author": "ahmed magdy",
 	"license": "ISC",
@@ -18,6 +18,7 @@
 		"get-user-media-promise": "^1.1.4",
 		"getusermedia": "^2.0.1",
 		"mongoose": "^6.0.7",
+		"peer": "^0.6.1",
 		"peerjs": "^1.3.2",
 		"simple-peer": "^9.11.0",
 		"wrtc": "^0.4.7"
