--- a/package.json
+++ b/package.json
@@ -5,22 +5,15 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "budo app.js"
+		"start": "node app.js"
 	},
 	"author": "ahmed magdy",
 	"license": "ISC",
 	"dependencies": {
-		"browser-env": "^3.3.0",
-		"bundle-js": "^1.0.3",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
-		"get-user-media-promise": "^1.1.4",
-		"getusermedia": "^2.0.1",
 		"mongoose": "^6.0.7",
-		"peer": "^0.6.1",
-		"peerjs": "^1.3.2",
-		"simple-peer": "^9.11.0",
-		"wrtc": "^0.4.7"
+		"peer": "^0.6.1"
 	}
 }
